--- a/pdf2docx_converter.ipynb
+++ b/pdf2docx_converter.ipynb
@@ -141,7 +141,7 @@
       "source": [
         "#Download the file in your pc\n",
         "from google.colab import files\n",
-        "#files.download(\"enter pathway\")\n",
+        "#files.download(\"enter pathway where your file is saved in current session\")\n",
         "files.download(\"/content/Rendezvous_With_Rama.docx\")"
       ],
       "metadata": {
